PROD_10-24-19/force-app/main/default/objects/Configurable_RollUp_Setting__c/Configurable_RollUp_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Configurable RollUp Setting</label>
</CustomObject>