PROD_10-24-19/force-app/main/default/objects/Configurable_RollUp_Setting__c/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <label>Filter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>