PROD_10-24-19/force-app/main/default/objects/Configurable_RollUp_Setting__c/fields/Minimum__c.field-meta.xml
<CustomField>
    <fullName>Minimum__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Action name, which will perform on the field.</description>
    <inlineHelpText>Action name, which will perform on the field.</inlineHelpText>
    <label>Minimum</label>
    <type>Checkbox</type>
</CustomField>