PROD_10-24-19/force-app/main/default/objects/Configurable_RollUp_Setting__c/fields/Relationship_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field_API_Name__c</fullName>
    <description>API name of related object (parent object) to which rollup will be saved</description>
    <inlineHelpText>API name of related object (parent object) to which rollup will be saved</inlineHelpText>
    <label>Relationship Field API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>