PROD_10-24-19/force-app/main/default/objects/Configurable_RollUp_Setting__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <label>Target Field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>