PROD_10-24-19/force-app/main/default/objects/Configurable_RollUp_Setting__c/fields/Target_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_Name__c</fullName>
    <label>Target Object Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>