PROD_10-24-19/force-app/main/default/objects/Configurable_RollUp_Setting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source_Field__c</columns>
    <columns>Target_Field__c</columns>
    <columns>Maximum__c</columns>
    <columns>Minimum__c</columns>
    <columns>Sum__c</columns>
    <columns>Source_Object_Name__c</columns>
    <columns>Relationship_Field_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>